# wos-translator

./: BUILD.md  CMakeLists.txt  DEPLOYMENT.md  README.md
cmake/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  windows-x64.cmake
include/: config_manager.h  error.h  exporter.h  html_parser.h  logger.h  platform.h  storage_manager.h  task_queue.h  translator.h  web_server.h
scripts/: build-curl-arm64.sh  build-curl-static.sh  build-windows.bat  build.sh  embed_resources.py  install.sh  start.sh  wos-translator.service
src/: config_manager.cpp  embedded_resources.cpp  embedded_resources.h  exporter.cpp  html_parser.cpp  logger.cpp  main.cpp  storage_manager.cpp  task_queue.cpp  translator.cpp  web_server.cpp
web/: convert.html  donate.html  index.html  models.html  queue.html  settings.html  task.html  translate.html
web/assets/js/: common.js  queue.js  task.js  translate.js
